--- a/index.html
+++ b/index.html
@@ -3,44 +3,49 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="My personal blog">
-    <title>My Blog</title>
+    <meta name="description" content="StarScope - Your VIP Pass to Celebrity Gossip">
+    <title>StarScope</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <!-- Header -->
     <header>
-        <h1>Welcome to My Blog</h1>
+        <h1>StarScope</h1>
         <nav>
             <ul>
                 <li><a href="#">Home</a></li>
-                <li><a href="#">About</a></li>
+                <li><a href="#">Trending</a></li>
+                <li><a href="#">Red Carpet</a></li>
+                <li><a href="#">Exclusives</a></li>
                 <li><a href="#">Contact</a></li>
             </ul>
         </nav>
     </header>
 
-    <!-- Main Content -->
     <main>
-        <section class="blog-posts">
-            <article>
-                <h2>First Blog Post</h2>
-                <p class="date">May 9, 2025</p>
-                <p>This is my first blog post. Welcome to my journey!</p>
+        <section class="gossip-grid">
+            <article class="gossip-item">
+                <img src="https://via.placeholder.com/300x200" alt="Rachel Zegler and Timothée Chalamet">
+                <h2>Rachel Zegler Throws Shade at Timothée Chalamet Fans</h2>
+                <p>At the 70th David Di Donatello Awards in Rome, Rachel Zegler playfully teased Timothée Chalamet fans after he and Kylie Jenner made their red carpet debut...</p>
                 <a href="#">Read more...</a>
             </article>
-            <article>
-                <h2>Another Blog Post</h2>
-                <p class="date">May 8, 2025</p>
-                <p>This is another post on my blog. I'm excited to share my thoughts with you!</p>
+            <article class="gossip-item">
+                <img src="https://via.placeholder.com/300x200" alt="Emily Osment and Jack Anthony">
+                <h2>Emily Osment Calls It Quits: 'Hannah Montana' Star Divorces Husband</h2>
+                <p>Former 'Hannah Montana' actress Emily Osment is divorcing her husband Jack Anthony just days before her 33rd birthday...</p>
+                <a href="#">Read more...</a>
+            </article>
+            <article class="gossip-item">
+                <img src="https://via.placeholder.com/300x200" alt="Ed Westwick and Amy Jackson">
+                <h2>Ed Westwick and Amy Jackson Welcome First Child</h2>
+                <p>Ed Westwick and Amy Jackson have welcomed their first child together, a son named Oscar Alexander...</p>
                 <a href="#">Read more...</a>
             </article>
         </section>
     </main>
 
-    <!-- Footer -->
     <footer>
-        <p>&copy; 2025 My Blog. All rights reserved.</p>
+        <p>&copy; 2025 StarScope. All rights reserved.</p>
     </footer>
 </body>
 </html>
