--- a/index.html
+++ b/index.html
@@ -1,111 +1,102 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <meta name="description" content="StarScope - Your VIP Pass to Celebrity Gossip" />
-  <title>StarScope</title>
-  <link rel="stylesheet" href="style.css" />
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="StarScope - Your VIP Pass to Celebrity Gossip">
+    <title>StarScope</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <header>
-    <h1>StarScope</h1>
-  </header>
+    <header>
+        <h1>StarScope</h1>
+        <nav>
+            <ul>
+                <li><a href="#">Home</a></li>
+                <li><a href="#">Trending</a></li>
+                <li><a href="#">Red Carpet</a></li>
+                <li><a href="#">Exclusives</a></li>
+                <li><a href="#">Contact</a></li>
+            </ul>
+        </nav>
+    </header>
 
-  <!-- TABS -->
-  <div class="tabs">
-    <button class="tablinks" onclick="openTab(event, 'Trending')">Trending</button>
-    <button class="tablinks" onclick="openTab(event, 'RedCarpet')">Red Carpet</button>
-    <button class="tablinks" onclick="openTab(event, 'Exclusives')">Exclusives</button>
-    <button class="tablinks" onclick="openTab(event, 'Contact')">Contact</button>
-  </div>
+    <main>
+        <section class="gossip-grid">
+            <article class="gossip-item">
+                <img src="https://via.placeholder.com/300x200" alt="Rachel Zegler and Timothée Chalamet">
+                <h2>Rachel Zegler Throws Shade at Timothée Chalamet Fans</h2>
+                <p>At the 70th David Di Donatello Awards in Rome, Rachel Zegler playfully teased Timothée Chalamet fans after he and Kylie Jenner made their red carpet debut...</p>
+                <a href="#">Read more...</a>
+            </article>
+            <article class="gossip-item">
+                <img src="https://via.placeholder.com/300x200" alt="Emily Osment and Jack Anthony">
+                <h2>Emily Osment Calls It Quits: 'Hannah Montana' Star Divorces Husband</h2>
+                <p>Former 'Hannah Montana' actress Emily Osment is divorcing her husband Jack Anthony just days before her 33rd birthday...</p>
+                <a href="#">Read more...</a>
+            </article>
+            <article class="gossip-item">
+                <img src="https://via.placeholder.com/300x200" alt="Ed Westwick and Amy Jackson">
+                <h2>Ed Westwick and Amy Jackson Welcome First Child</h2>
+                <p>Ed Westwick and Amy Jackson have welcomed their first child together, a son named Oscar Alexander...</p>
+                <a href="#">Read more...</a>
+            </article>
+        </section>
+    </main>
 
-  <!-- CONTENT -->
-  <main>
-    <!-- Trending -->
-    <section id="Trending" class="tabcontent">
-      <article class="gossip-item">
-        <img src="https://via.placeholder.com/300x200" alt="Rachel Zegler and Timothée Chalamet">
-        <h2>Rachel Zegler Throws Shade at Timothée Chalamet Fans</h2>
-        <p class="excerpt">
-          At the 70th David Di Donatello Awards in Rome, Rachel Zegler playfully teased Timothée Chalamet fans...
-          <span class="more-text">after he and Kylie Jenner made their red carpet debut. “Some of y’all need to relax,” she joked. Fans quickly reacted online, making it one of the buzziest celebrity moments this week.</span>
-        </p>
-        <button class="read-more-btn">Read More</button>
-      </article>
-    </section>
+    <footer>
+        <p>&copy; 2025 StarScope. All rights reserved.</p>
+    </footer>
+</body>
+</html>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="StarScope - Your VIP Pass to Celebrity Gossip">
+    <title>StarScope</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
+    <header>
+        <h1>StarScope</h1>
+        <nav>
+            <ul>
+                <li><a href="#">Home</a></li>
+                <li><a href="#">Trending</a></li>
+                <li><a href="#">Red Carpet</a></li>
+                <li><a href="#">Exclusives</a></li>
+                <li><a href="#">Contact</a></li>
+            </ul>
+        </nav>
+    </header>
 
-    <!-- Red Carpet -->
-    <section id="RedCarpet" class="tabcontent">
-      <article class="gossip-item">
-        <img src="https://via.placeholder.com/300x200" alt="Emily Osment">
-        <h2>Emily Osment Files for Divorce</h2>
-        <p class="excerpt">
-          Former Hannah Montana star Emily Osment is ending her marriage to Jack Anthony...
-          <span class="more-text">just days before her 33rd birthday. Sources say the couple quietly separated months ago, and Osment is focusing on a new Netflix series and reclaiming her time.</span>
-        </p>
-        <button class="read-more-btn">Read More</button>
-      </article>
-    </section>
+    <main>
+        <section class="gossip-grid">
+            <article class="gossip-item">
+                <img src="https://via.placeholder.com/300x200" alt="Rachel Zegler and Timothée Chalamet">
+                <h2>Rachel Zegler Throws Shade at Timothée Chalamet Fans</h2>
+                <p>At the 70th David Di Donatello Awards in Rome, Rachel Zegler playfully teased Timothée Chalamet fans after he and Kylie Jenner made their red carpet debut...</p>
+                <a href="#">Read more...</a>
+            </article>
+            <article class="gossip-item">
+                <img src="https://via.placeholder.com/300x200" alt="Emily Osment and Jack Anthony">
+                <h2>Emily Osment Calls It Quits: 'Hannah Montana' Star Divorces Husband</h2>
+                <p>Former 'Hannah Montana' actress Emily Osment is divorcing her husband Jack Anthony just days before her 33rd birthday...</p>
+                <a href="#">Read more...</a>
+            </article>
+            <article class="gossip-item">
+                <img src="https://via.placeholder.com/300x200" alt="Ed Westwick and Amy Jackson">
+                <h2>Ed Westwick and Amy Jackson Welcome First Child</h2>
+                <p>Ed Westwick and Amy Jackson have welcomed their first child together, a son named Oscar Alexander...</p>
+                <a href="#">Read more...</a>
+            </article>
+        </section>
+    </main>
 
-    <!-- Exclusives -->
-    <section id="Exclusives" class="tabcontent">
-      <article class="gossip-item">
-        <img src="https://via.placeholder.com/300x200" alt="Ed Westwick and Amy Jackson">
-        <h2>Ed Westwick and Amy Jackson Welcome Baby Boy</h2>
-        <p class="excerpt">
-          Gossip Girl's Ed Westwick and actress Amy Jackson just welcomed their first child together...
-          <span class="more-text">a baby boy named Oscar Alexander. The couple shared exclusive photos with StarScope, calling it the “happiest moment of our lives.”</span>
-        </p>
-        <button class="read-more-btn">Read More</button>
-      </article>
-    </section>
-
-    <!-- Contact -->
-    <section id="Contact" class="tabcontent">
-      <h3>Contact StarScope</h3>
-      <p>Got a tip? Email us at <a href="mailto:tips@starscope.com">tips@starscope.com</a></p>
-      <p>Follow us on Instagram: <a href="https://instagram.com/starscopegossip" target="_blank">@starscopegossip</a></p>
-    </section>
-  </main>
-
-  <footer>
-    <p>&copy; 2025 StarScope. All rights reserved.</p>
-  </footer>
-
-  <!-- JS for Tabs and Read More -->
-  <script>
-    function openTab(evt, tabName) {
-      const tabcontent = document.getElementsByClassName("tabcontent");
-      for (let i = 0; i < tabcontent.length; i++) {
-        tabcontent[i].style.display = "none";
-      }
-
-      const tablinks = document.getElementsByClassName("tablinks");
-      for (let i = 0; i < tablinks.length; i++) {
-        tablinks[i].classList.remove("active");
-      }
-
-      document.getElementById(tabName).style.display = "block";
-      evt.currentTarget.classList.add("active");
-    }
-
-    document.addEventListener("DOMContentLoaded", () => {
-      document.getElementsByClassName("tablinks")[0].click();
-
-      document.querySelectorAll('.read-more-btn').forEach(button => {
-        button.addEventListener('click', function () {
-          const moreText = this.previousElementSibling.querySelector(".more-text");
-          if (moreText.style.display === "inline") {
-            moreText.style.display = "none";
-            this.textContent = "Read More";
-          } else {
-            moreText.style.display = "inline";
-            this.textContent = "Read Less";
-          }
-        });
-      });
-    });
-  </script>
+    <footer>
+        <p>&copy; 2025 StarScope. All rights reserved.</p>
+    </footer>
 </body>
 </html>
